* Update auth API
